# kototama

./: .gitignore  Cargo.toml  README.md  deps.edn  kototama  schema.edn  security-adoption.edn
.github/workflows/: ci.yml
90-docs/adr/: 0001-kototama-clojure-wasm-runtime.md  0005-maturity-r1-session-report-and-host-free-guests.md  0006-maturity-r2-browser-parity-r3-fleet-skeleton.md  0007-http-post-paths-and-fleet-persist-execute.md  0008-maturity-r3-stable-shared-store-fleet.md  0009-wasi-0.3-component-tender.md
clj/: deps.edn
clj/wasm/: README.md  prior_shortcut.kotoba  prior_shortcut.wasm
deploy/: staging-smoke.sh  validate-packaging.sh
deploy/systemd/: README.md  kototama-fleet-daemon.service  kototama-fleet-daemon.timer
docs/: 0009-stack-topology-parity-gate-capability-schema.md  maturity.md  rust-migration.md
lib/actor/: fleet-heartbeat.cljs  identity.cljc  publish.cljs  test_atproto.cljc
lib/kototama/: emit.cljc  host.edn  leash.cljc
scripts/: edn-datomize.bb
src/: lib.rs
src/kototama/: aiueos_adapter.clj  browser.cljc  cli.clj  compatibility.clj  component-platform.edn  component_platform.clj  contract.cljc  fleet.cljc  fleet_exec.clj  fleet_fence.cljc  fleet_store.clj  (+4 more)
web/: README.md  generate.cljs  host-free-peak-cells.wasm  index.html  kotoba-script-host.mjs  kotoba-script-worker-host.mjs  kotoba-script-worker.mjs  kototama-wasm-kgraph-demo.js  kototama-wasm-run.js  verify-actor-host.mjs  verify-host-free.mjs  verify-kgraph.mjs  verify-kotoba-script-browser.html  verify-kotoba-script-worker.mjs  verify-kotoba-script.mjs  verify.mjs
(+50 files in other folders)
