[package]
name = "kototama"
version = "0.1.0"
edition = "2021"
description = "kototama — clojure-wasm-runtime: Clojure/EDN subset → WebAssembly, unifying kotoba-clj (general core) + kami-engine-clj (game layer). Runs native (wasmtime) and in the browser (the compiler itself compiles to wasm)."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kotoba-clj      = { path = "../kotoba/crates/kotoba-clj", default-features = false }
kami-engine-clj = { path = "../kami-engine/kami-engine-clj", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
default = []
# native execution of compiled modules (wasmtime), for CLI / tests / host runtime.
run = ["kotoba-clj/run"]
